--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -144,8 +144,8 @@
     %\caption{An algorithm with caption}\label{alg:cap}
     \begin{itemize} 
       \item \textbf{Grid diagram}: A link diagram of vertical strands and the same number of horizontal strands with the properties that at every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co-linear and no two vertical segments are co-linear.
-      \item \textbf{Cromwell matrix}: An $n\times n$ binary matrix each of whose rows and columns has exactly two $1$'s. For $\theta$-curve and handcuff graph, its cromwell matrix is an $n\times(n{+}1)$ binary matrix that exactly two rows (called Three-rows) has exactly three $1$'s and rest of the rows and each columns has exactly two $1$'s.
-      \item \textbf{Arc presentation}: There is an open-book decomposition of $\mathbb{R}^3$ which has open half-planes as pages and the standard z-axis as the binding axis. Every link L can be embedded in an open-book decomposition with finitely many pages so that it meets each page in exactly one simple arc with two different end-points on the binding axis.
+      \item \textbf{Cromwell matrix}: An $n\times n$ binary matrix each of whose rows and columns has exactly two $1$s. For $\theta$-curve and handcuff graph, its cromwell matrix is an $n\times(n{+}1)$ binary matrix that exactly two rows (called Three-rows) has exactly three $1$s and rest of the rows and each columns has exactly two $1$s.
+      \item \textbf{Arc presentation}: There is an open-book decomposition of $\mathbb{R}^3$ which has open half-planes as pages and the standard z-axis as the binding axis. Every link $L$ can be embedded in an open-book decomposition with finitely many pages so that it meets each page in exactly one simple arc with two different end-points on the binding axis.
     \end{itemize}
 
     \begin{figure}[h]
@@ -187,7 +187,7 @@
     \begin{figure}
       \centering
       \includegraphics[width=0.4\textwidth]{figure/stacked_theta.png}
-      \caption{Stacked tangle of $\theta$-curve}
+      \caption{Stacked tangle of handcuff graph}
     \end{figure}
     \begin{itemize}
       \item An arc in simple disk and arc in other simple disk or tree in non-simple disk intersect at most one point, and any two caps have no intersection when viewed from above.
