--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -207,13 +207,13 @@
   
   \column{0.33\textwidth}
   \begin{block}{Bounds of Arc Index}
-  $\mathbf{Theorem}$ $[$3$]$ For any spatial graph $G$, 
+  $\mathbf{Theorem\ 1.}$ $[$3$]$ For any spatial graph $G$, 
   \begin{equation*}
     \alpha(H) \leq c(H) + e + b
   \end{equation*}
   where $\alpha (G)$, $c(G)$ are each arc index, crossing number of $G$, $e$ is the number of edges, and $b$ is the number of bouquet cut-components.
   
-  $\mathbf{Corollary.}$ $[$3$]$ For non-trivial handcuff graph $H$,
+  $\mathbf{Corollary\ 1.}$ $[$3$]$ For non-trivial handcuff graph $H$,
   \begin{equation*}
     \alpha(H) \leq c(H) + 3
   \end{equation*}
@@ -241,12 +241,12 @@
   %\end{equation*}
 
 
-  $\mathbf{Theorem.}$ Let $H$ be a handcuff graph and $L$ is link that connecting edge is deleted from $H$. If $L$ is non-split alternating, then 
+  $\mathbf{Theorem\ 2.}$ Let $H$ be a handcuff graph and $L$ is link that connecting edge is deleted from $H$. If $L$ is non-split alternating, then 
   \begin{equation*}
     \alpha(H) \geq c(L) + 3
   \end{equation*}
 
-    $\mathbf{Definition.}$ For a graph $G$ and its edge set $E$, let
+    $\mathbf{Definition\ 1.}$ For a graph $G$ and its edge set $E$, let
     \[ h(G)(x, y) = \sum_{F \subset E} (-x)^{-|F|} x^{\mu(G-F)} y^{\beta(G-F)}. \]
     \ where $\mu(G)$ is the number of connected components of $G$, and $\beta(G)$ is the first Betti number of $G$. \\
     \ Then, the \textbf{Yamada polynomial} of a graph $G$, $R(G)$ is defined by
@@ -258,13 +258,13 @@
 
     %\vspace{1em}
     
-    $\mathbf{Theorem.}$ $[$1$]$ Let $S_T$ be a simple closure of stacked tangle of a theta-curve or handcuff graph, and let $n$ be the number of crossings in $S_T$. Then,
+    $\mathbf{Theorem\ 3.}$ $[$1$]$ Let $S_T$ be a simple closure of stacked tangle of a theta-curve or handcuff graph, and let $n$ be the number of crossings in $S_T$. Then,
      \[ \mathrm{spr}(R(S_T)) \leq 2n+2 \]
      where $\mathrm{spr}(f)$ denotes the difference between the maximal and minimal degrees of $f$. \\
 
     %\vspace{1em}
 
-    $\mathbf{Corollary.}$ $[$1$]$ Let $G$ be a theta-curve or handcuff graph. Then, the arc index of $G$ is bounded by
+    $\mathbf{Corollary\ 2.}$ $[$1$]$ Let $G$ be a theta-curve or handcuff graph. Then, the arc index of $G$ is bounded by
       \[ \alpha(G) \geq \frac{5 + \sqrt{4 \mathrm{spr}(R(G)) - 15}}{2}. \]
   \end{block}
 
