--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -213,7 +213,7 @@
   \end{equation*}
   where $\alpha (G)$, $c(G)$ are each arc index, crossing number of $G$, $e$ is the number of edges, and $b$ is the number of bouquet cut-components.
   
-  $\mathbf{Corollary\ 1.}$ $[$3$]$ For non-trivial handcuff graph $H$,
+  $\mathbf{Corollary\ 1.}$ For non-trivial handcuff graph $H$,
   \begin{equation*}
     \alpha(H) \leq c(H) + 3
   \end{equation*}
@@ -248,7 +248,7 @@
 
     $\mathbf{Definition\ 1.}$ For a graph $G$ and its edge set $E$, let
     \[ h(G)(x, y) = \sum_{F \subset E} (-x)^{-|F|} x^{\mu(G-F)} y^{\beta(G-F)}. \]
-    \ where $\mu(G)$ is the number of connected components of $G$, and $\beta(G)$ is the first Betti number of $G$. \\
+    \ where $\mu(G)$ and $\beta(G)$ are the number of connected components, the first Betti number of $G$. \\
     \ Then, the \textbf{Yamada polynomial} of a graph $G$, $R(G)$ is defined by
     \[ R(G)(x) = h(G)(-1, -x-2-x^{-1}). \]
 
@@ -264,7 +264,7 @@
 
     %\vspace{1em}
 
-    $\mathbf{Corollary\ 2.}$ $[$1$]$ Let $G$ be a theta-curve or handcuff graph. Then, the arc index of $G$ is bounded by
+    $\mathbf{Corollary\ 2.}$ Let $G$ be a theta-curve or handcuff graph. Then, the arc index of $G$ is bounded by
       \[ \alpha(G) \geq \frac{5 + \sqrt{4 \mathrm{spr}(R(G)) - 15}}{2}. \]
   \end{block}
 
