--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -153,9 +153,9 @@
       \centering
       \begin{tabular}{cc}
         \includegraphics[width=0.4\textwidth]{figure/grid.png} &
-        \includegraphics[width=0.4\textwidth]{figure/openbook.png} \\
+        \includegraphics[width=0.4\textwidth]{figure/handcuff_openbook.png} \\
       \end{tabular}        
-      \caption{Grid diagram and Arc presentation of $\theta$-curve $3_1$}
+      \caption{Grid diagram and Arc presentation of $\theta$-curve $3_1$ and handcuff graph $2_1$}
     \end{figure}
   \end{block}
     
