--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -167,7 +167,7 @@
 
   \vspace{0.33em}
   
-  $\mathbf{Theorem.}$ Let $G$ be a $\theta$-curve or handcuff graph, and the $H$ be a H-deletion matrix. Then,
+  $\mathbf{Theorem\ 1.}$ Let $G$ be a $\theta$-curve or handcuff graph, and the $H$ be a H-deletion matrix. Then,
   $G$ is a $\theta$-curve if and only if $\det{H} = \pm 1$, and $G$ is a handcuff graph if and only if $\det{H} = 0 \text{ or } \pm2$.
   \begin{figure}[h]
     \centering
@@ -207,7 +207,7 @@
   
   \column{0.33\textwidth}
   \begin{block}{Bounds of Arc Index}
-  $\mathbf{Theorem\ 1.}$ $[$3$]$ For any spatial graph $G$, 
+  $\mathbf{Theorem\ 2.}$ $[$3$]$ For any spatial graph $G$, 
   \begin{equation*}
     \alpha(H) \leq c(H) + e + b
   \end{equation*}
@@ -241,7 +241,7 @@
   %\end{equation*}
 
 
-  $\mathbf{Theorem\ 2.}$ Let $H$ be a handcuff graph and $L$ is link that connecting edge is deleted from $H$. If $L$ is non-split alternating, then 
+  $\mathbf{Theorem\ 3.}$ Let $H$ be a handcuff graph and $L$ is link that connecting edge is deleted from $H$. If $L$ is non-split alternating, then 
   \begin{equation*}
     \alpha(H) \geq c(L) + 3
   \end{equation*}
@@ -258,7 +258,7 @@
 
     %\vspace{1em}
     
-    $\mathbf{Theorem\ 3.}$ $[$1$]$ Let $S_T$ be a simple closure of stacked tangle of a theta-curve or handcuff graph, and let $n$ be the number of crossings in $S_T$. Then,
+    $\mathbf{Theorem\ 4.}$ $[$1$]$ Let $S_T$ be a simple closure of stacked tangle of a theta-curve or handcuff graph, and let $n$ be the number of crossings in $S_T$. Then,
      \[ \mathrm{spr}(R(S_T)) \leq 2n+2 \]
      where $\mathrm{spr}(f)$ denotes the difference between the maximal and minimal degrees of $f$. \\
 
