--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -155,7 +155,7 @@
         \includegraphics[width=0.4\textwidth]{figure/grid.png} &
         \includegraphics[width=0.4\textwidth]{figure/handcuff_openbook.png} \\
       \end{tabular}        
-      \caption{Grid diagram and Arc presentation of $\theta$-curve $3_1$ and handcuff graph $2_1$}
+      \caption{Grid diagram of $\theta$-curve $3_1$ and arc presentation of handcuff graph $2_1$}
     \end{figure}
   \end{block}
     
