--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -247,9 +247,9 @@
   \end{equation*}
 
     $\mathbf{Definition\ 1.}$ $[$5$]$ For a graph $G$, let
-    \[ h(G)(x, y) = \sum_{F \subset E} (-x)^{-|F|} x^{\mu(G-F)} y^{\beta(G-F)}. \]
-    where $\mu(G)$, $\beta(G)$, and $E$ are the number of connected components, the first Betti number, edge set of $G$ each.
-    Then, the \textbf{Yamada polynomial} of a graph $G$, $R(G)$ is defined by
+    \[ h(G)(x, y) = \sum_{F \subset E} (-x)^{-|F|} x^{\mu(G-F)} y^{\beta(G-F)} \]
+    where $\mu(G)$, $\beta(G)$, and $E$ are the number of connected components, the first Betti number, and the edge set of $G$ each. Therefore, the \\
+    \textbf{Yamada polynomial} of $G$, $R(G)$, is defined by
     \[ R(G)(x) = h(G)(-1, -x-2-x^{-1}). \]
 
     %\vspace{1em}
